# MonTyper

./: CMakeLists.txt  README.md
resources/: words.txt
src/: Game.cpp  Game.h  GameSettings.cpp  GameSettings.h  MenuSystem.cpp  MenuSystem.h  MovingWord.cpp  MovingWord.h  WordDatabase.cpp  WordDatabase.h  main.cpp
